Kitchensink.java failed with "double free or corruption (!prev): <addr>"

XMLWordPrintable

    • gc
    • b28
    • x86_64
    • linux

        The following test failed in the JDK20 CI:

        applications/kitchensink/Kitchensink.java

        Here's a snippet from the log file:

        [stress.process.err] Iteration start: Monitor at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: MemAccess at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: MBean at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Inflater at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: SpecJbb2005 at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Reference at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: LockDeflation at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Jcmd at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Jni at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Jvmti at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Jstat at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: SpecJvm2008Batch at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: ThreadDumper at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Jfr at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Perfmon at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: NMT at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Exception at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration start: Allocator at Sat Nov 12 04:13:14 UTC 2022
        [stress.process.err] Iteration done: MBean at Sat Nov 12 04:13:16 UTC 2022
        [stress.process.err] Iteration done: ThreadDumper at Sat Nov 12 04:13:16 UTC 2022
        [stress.process.err] *** Error in `/opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/bin/java': double free or corruption (!prev): 0x00007fcaf0009a70 ***
        [stress.process.err] ======= Backtrace: =========
        [stress.process.err] /lib64/libc.so.6(+0x81329)[0x7fcb74161329]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0xfea973)[0x7fcb72dc4973]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0x16097ae)[0x7fcb733e37ae]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0x1687ca3)[0x7fcb73461ca3]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0x174af8b)[0x7fcb73524f8b]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0xe5f027)[0x7fcb72c39027]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0x1bd6c90)[0x7fcb739b0c90]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0x1a7e070)[0x7fcb73858070]
        [stress.process.err] /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+24-1714/linux-x64-debug.jdk/jdk-20/fastdebug/lib/server/libjvm.so(+0x1714e43)[0x7fcb734eee43]
        [stress.process.err] /lib64/libpthread.so.0(+0x7ea5)[0x7fcb746b9ea5]
        [stress.process.err] /lib64/libc.so.6(clone+0x6d)[0x7fcb741deb2d]
        [stress.process.err] ======= Memory map: ========
        [stress.process.err] 519800000-785800000 rw-p 00000000 00:00 0
        [stress.process.err] 785800000-7ff000000 ---p 00000000 00:00 0
        [stress.process.err] 7ff000000-7ff700000 rw-p 00000000 00:00 0

        <snip>

        [stress.process.err] 7ffe872a8000-7ffe872ab000 r--p 00000000 00:00 0 [vvar]
        [stress.process.err] 7ffe872ab000-7ffe872ad000 r-xp 00000000 00:00 0 [vdso]
        [stress.process.err] ffffffffff600000-ffffffffff601000 r-xp 00000000 00:00 0 [vsyscall]
        Stress process is started and all modules initialized.
        Dumping stress process VM options.
         stdout: [23488:
        ];
         stderr: [java.io.IOException: Connection reset by peer
        at jdk.attach/sun.tools.attach.VirtualMachineImpl.read(Native Method)
        at jdk.attach/sun.tools.attach.VirtualMachineImpl$SocketInputStream.read(VirtualMachineImpl.java:265)
        at jdk.attach/sun.tools.attach.HotSpotVirtualMachine.readInt(HotSpotVirtualMachine.java:332)
        at jdk.attach/sun.tools.attach.VirtualMachineImpl.execute(VirtualMachineImpl.java:197)
        at jdk.attach/sun.tools.attach.HotSpotVirtualMachine.executeCommand(HotSpotVirtualMachine.java:313)
        at jdk.attach/sun.tools.attach.HotSpotVirtualMachine.executeJCmd(HotSpotVirtualMachine.java:295)
        at jdk.jcmd/sun.tools.jcmd.JCmd.executeCommandForPid(JCmd.java:124)
        at jdk.jcmd/sun.tools.jcmd.JCmd.main(JCmd.java:97)
        ]
         exitValue = 1

        Got an exception, so I'll kill the stress process process
        [Sat Nov 12 04:14:20 UTC 2022] Unexpected errors during GlueModule initialization: Expected to get exit value of [0], exit value is: [1]
        java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [1]
        at jdk.test.lib.process.OutputAnalyzer.shouldHaveExitValue(OutputAnalyzer.java:490)
        at applications.kitchensink.process.glue.Main.dumpOptions(Main.java:442)
        at applications.kitchensink.process.glue.Main.execute(Main.java:333)
        at applications.kitchensink.process.glue.Main.main(Main.java:217)
        at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
        at java.base/java.lang.reflect.Method.invoke(Method.java:578)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
        at java.base/java.lang.Thread.run(Thread.java:1591)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [1]

              Assignee:
              Coleen Phillimore
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: