8296955: Kitchensink.java failed with "double free or corruption (!prev): <addr>"